--- a/Areas/Admin/Views/Service/Edit.cshtml
+++ b/Areas/Admin/Views/Service/Edit.cshtml
@@ -40,7 +40,14 @@
                             <textarea asp-for="Description" class="form-control"></textarea>
                             <span asp-validation-for="Description" class="text-danger" />
                         </div>
+                        <div class="form-group mt-2">
+                            <label class="form-label">Danh mục</label>
+                            <select asp-for="CategoryServiceId" class="form-control" asp-items="ViewBag.Category">
+                                <option>--Chọn danh mục</option>
 
+                            </select>
+                            <span asp-validation-for="CategoryServiceId" class="text-danger" />
+                        </div>
 
 
 
