--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -52,6 +52,7 @@
 
                         <hr>
                         <p>hoặc</p>
+                        <p><b>Đăng nhập với</b></p>
 
                         <div class="social-login">
                             <div class="row">
@@ -114,6 +115,7 @@
         }
    
     }
+    @await Component.InvokeAsync("Notyf")
     <!-- Nhúng jQuery và Toastr -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
