--- a/Views/Appointment/Appointment.cshtml
+++ b/Views/Appointment/Appointment.cshtml
@@ -1,1 +1,70 @@
-﻿<h3>Đã đặt lịch thành công</h3>
+﻿@model ThaiYVien.Data.Dto.Appointment.AppointmentDto
+
+
+<style>
+    .checkout-container {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .order-summary {
+        background-color: #f8f0e3;
+        padding: 20px;
+        border-radius: 8px;
+    }
+
+    .btn-order {
+        background-color: #4d2c1d;
+        color: #fff;
+    }
+</style>
+<div class="container py-5">
+    <div class="row">
+        <div class="col-md-7">
+            <div class="checkout-container">
+                <h4 class="fw-bold text-danger">THÔNG TIN TRỊ LIỆU</h4>
+                <form>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label class="form-label">Họ và tên *</label>
+                            <input asp-for="UserName" type="text" class="form-control" placeholder="Nhập tên">
+                        </div>
+                        
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Số điện thoại *</label>
+                        <input type="tel" asp-for="PhoneNumber" class="form-control" placeholder="Nhập số điện thoại">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Địa chỉ email *</label>
+                        <input type="email" class="form-control" asp-for="Email" placeholder="Nhập email">
+                    </div>
+                    <h5 class="fw-bold text-danger">THÔNG TIN BỔ SUNG</h5>
+                    <div class="mb-3">
+                        <label class="form-label">Ghi chú đơn hàng (tuỳ chọn)</label>
+                        <textarea class="form-control" rows="3" asp-for="Note" placeholder="Nhập ghi chú nếu có..."></textarea>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="order-summary">
+                <h4 class="fw-bold text-danger">ĐƠN HÀNG CỦA BẠN</h4>
+                <p><strong>SẢN PHẨM</strong></p>
+                <p>@Model.ServiceName</p>
+                <p><strong>Appointment details:</strong></p>
+                <p>Ngày hẹn: @Model.SlotDate.ToString("dd-MM-yyyy")</p>
+                <p>Thời gian: @Model.SlotTime</p>
+                @* <p>Nhân viên/cửa hàng: Phạm Thị Ngân</p> *@
+                <hr>
+                <p class="fw-bold">Tạm tính: <span class="float-end">@(Model.Amount?.ToString("N0") ?? "0") đ</span></p>
+
+               
+                <p class="fw-bold">Tổng: <span class="float-end">@(Model.Amount?.ToString("N0") ?? "0") đ</span></p>
+                @* <button class="btn btn-order w-100 py-2">ĐẶT HÀNG</button> *@
+            </div>
+        </div>
+    </div>
+</div>
