--- a/Views/Service/Index.cshtml
+++ b/Views/Service/Index.cshtml
@@ -1,145 +1,88 @@
-﻿<main id="main" class="">
+﻿@model IEnumerable<ServiceModel>
 
 
-    <div id="content" role="main" class="content-area">
+<main id="main" class="">
+
+
+    <div id="content" role="main" class="content-area ">
 
 
         <!-- <p><img class="alignnone wp-image-6644 size-full" src="/assets/img/Banner1.png" alt="" width="2000"
                 height="734" srcset="/assets/img/Banner1.png 2000w, /assets/img/Banner1.png 600w"
                 sizes="(max-width: 2000px) 100vw, 2000px"></p> -->
-        <h1 style="text-align: center;" class="mt-3">
-            <span style="color: #800000;">
-                <strong>
-                    HỆ THỐNG LIỆU
-                    TRÌNH&nbsp;
-                </strong>
-            </span>
-        </h1>
-        <div id="gap-1869721069" class="gap-element clearfix" style="display:block; height:auto;">
+        <div class="mt-3">
+            <h1 style="text-align: center;">
+                <span style="color: #800000;">
+                    <strong class="mt-3">
+                        HỆ THỐNG LIỆU
+                        TRÌNH&nbsp;
+                    </strong>
+                </span>
+            </h1>
+            <div id="gap-1869721069" class="gap-element clearfix" style="display:block; height:auto;">
 
-            <style>
-                #gap-1869721069 {
-                    padding-top: 50px;
-                }
-            </style>
-        </div>
-
-        <p style="text-align: justify;"></p>
-        <div class="row" id="row-1178404134">
-            <p style="text-align: justify;">
-            </p>
-            <div id="col-1542936681" class="col medium-4 small-12 large-4">
-                <div class="col-inner">
-
-
-                    <h4 style="text-align: center;">TRỊ LIỆU CƠ BẢN</h4>
-                    <div class="box has-hover   has-hover box-text-bottom">
-
-                        <div class="box-image">
-                            <a href="http://thaiyvien.log.vn">
-                                <div class="image-zoom">
-                                    <img style="height:301px;" src="~/FE/assets/img/trilieucoban.jpg"
-                                         class="attachment- size-  rounded-circle" alt="" loading="lazy"
-                                         srcset="~/FE/assets/img/trilieucoban.jpg 501w"
-                                         sizes="(max-width: 501px) 100vw, 501px">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="box-text text-left">
-                            <div class="box-text-inner">
-
-                                <p>
-                                    Cung cấp sự hỗ trợ ban đầu cho cơ thể, giúp thư giãn
-                                    và giảm các triệu chứng nhẹ liên quan đến căng thẳng, mỏi mệt hoặc
-                                    các vấn đề xương khớp cơ bản.
-                                    Tạo nền tảng cho quá trình phục hồi, cải thiện tuần hoàn và tăng cường hệ thống
-                                    miễn dịch.<a href="#">Xem thêm</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+                <style>
+                    #gap-1869721069 {
+                        padding-top: 50px;
+                    }
+                </style>
             </div>
 
+            <p style="text-align: justify;"></p>
+            <div class="row" id="row-1178404134">
+                <p style="text-align: justify;">
+                </p>
+                @foreach (var item in Model)
+                {
+                    <div id="col-1542936681" class="col medium-4 small-12 large-4">
+                        <div class="col-inner">
 
 
-            <div id="col-1252950776" class="col medium-4 small-12 large-4">
-                <div class="col-inner">
+                            <h4 style="text-align: center;">
+                                @((item.Title.Length > 20) ? item.Title.Substring(0, 30) + "..." : item.Title)
+                            </h4>
+                            <div class="box has-hover   has-hover box-text-bottom">
 
+                                <div class="box-image mt-3">
 
-                    <h4 style="text-align: center;">TRỊ LIỆU NÂNG CAO</h4>
-                    <div class="box has-hover   has-hover box-text-bottom">
-
-                        <div class="box-image">
-                            <a href="#">
-                                <div class="image-zoom">
-                                    <img src="~/FE/assets/img/trilieunangcao.jpg" style="height:300px;"
-                                         class="attachment- size- rounded-circle" alt="" loading="lazy"
-                                         srcset="~/FE/assets/img/trilieunangcao.jpg 501w"
-                                         sizes="(max-width: 501px) 100vw, 501px">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="box-text text-left">
-                            <div class="box-text-inner">
-
-                                <p style="text-align: justify;">
-                                    Hỗ trợ điều trị các triệu chứng xương khớp kéo dài,
-                                    tăng cường chức năng vận động và giảm đau ở mức trung bình.
-                                    Kết hợp giữa y học cổ truyền và các kỹ thuật hiện đại nhằm nâng cao hiệu quả
-                                    điều trị. …<a href="">Xem thêm</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-
-
-            <div id="col-1269699485" class="col medium-4 small-12 large-4">
-                <div class="col-inner">
-
-
-                    <h4 style="text-align: center;">TRỊ LIỆU CHUYÊN SÂU</h4>
-                    <div class="box has-hover   has-hover box-text-bottom">
-
-                        <div class="box-image">
-                            <a href="#">
-                                <div class="image-zoom">
-                                    <img style="height:301px" src="~/FE/assets/img/trilieuchuyensau.jpg"
-                                         class="attachment- size-  rounded-circle" alt="" loading="lazy"
-                                         srcset="~/FE/assets/img/trilieuchuyensau.jpg 501w  "
-                                         sizes="(max-width: 501px) 100vw, 501px">
-                                </div>
-                            </a>
-                        </div>
-
-                        <div class="box-text text-left">
-                            <div class="box-text-inner">
-
-                                <p style="text-align: justify;">
-                                    Can thiệp và điều trị các trường hợp bệnh lý phức
-                                    tạp, cấp tính hoặc những vấn đề xương khớp nặng đã gây ảnh hưởng
-                                    nghiêm trọng đến chất lượng cuộc sống.…<a href="#">
-                                        Xem
-                                        thêm
+                                    <a asp-action="Detail" asp-controller="Service" asp-route-Id="@item.ID">
+                                        <div class="image-zoom">
+                                            <img style="height:301px;" src="~/image/service/@item.ImageUrl"
+                                                 class="attachment- size-  rounded-circle" alt="" loading="lazy"
+                                                 srcset="~/image/service/@item.ImageUrl 501w"
+                                                 sizes="(max-width: 501px) 100vw, 501px">
+                                        </div>
                                     </a>
-                                </p>
+                                </div>
+
+                                <div class="box-text text-left">
+                                    <div class="box-text-inner">
+
+                                        <p class="text-dark" style="font-size:20px;">
+                                            @((item.Description.Length > 40) ? item.Description.Substring(0, 40) + "..." : item.Description)
+
+                                            <a asp-action="Detail" asp-controller="Service" asp-route-Id="@item.ID">Xem thêm</a>
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
+
                         </div>
                     </div>
+                }
 
-                </div>
+
+
+
+
+
+
+
+
+
             </div>
-
-
         </div>
-        <div class="row" id="row-659985947">
+       @*  <div class="row" id="row-659985947">
             <h1 style="text-align: center;">
                 <span style="color: #800000;"><strong>HỖ TRỢ CHĂM SÓC</strong></span>
             </h1>
@@ -266,7 +209,7 @@
 
 
 
-        </div>
+        </div> *@
         <span class="cp-load-after-post"></span>
 
 
